<resources>
    <string name="app_name">Testing test</string>
    <string name="edit_message">Enter some message</string>
    <string name="button_message">Press!</string>
    <string name="title_activity_show_result">ShowResult</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="label_message">And now ..... woops!</string>
    <string name="button_run">Do something</string>
    <string name="button_show_empty2">Show empty activity 2</string>
    <string name="button_show_empty1">Show empty activity 1</string>
    <string name="label_new_doc">Open in a new document</string>
</resources>
